# chkmail-cli

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
chkmail/: __main__.py
